--- a/css/intro.css
+++ b/css/intro.css
@@ -20,8 +20,8 @@ body {
 #menubarActive {
   background-color: #6102FA;
   transition: all 1s ease;
-  width: 2000px;
-  height: 2000px;
+  width: 100%;
+  height: 100%;
   top: 0;
   right: 0;
   position: fixed;
