--- a/css/horizontalscroll.css
+++ b/css/horizontalscroll.css
@@ -4,7 +4,7 @@
 /*   CONTAINERS   */
 #container {
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: scroll;
   transform: none;
   transform-origin: top left;
   width:100vw;
@@ -20,7 +20,7 @@
   margin: auto;
 }
 
-.boxwrapper{
+.boxwrapper {
   position:relative;
   width:100vw;
   height:300px;
@@ -134,9 +134,11 @@
 
     transform: rotate(-90deg) translateX(-100%);
     -moz-transform: rotate(-90deg) translateX(-100%);
+    -webkit-transform: rotate(-90deg) translateX(-100%);
 
     transform-origin: top left;
     -moz-transform-origin: top left;
+    -webkit-transform-origin: top left;
 
     width:100vh;
     height:100vw;
@@ -148,9 +150,11 @@
 
     transform: rotate(90deg) translateY(-100vh);
     -moz-transform: rotate(90deg) translateY(-100vh);
+    -webkit-transform: rotate(90deg) translateY(-100vh);
 
     transform-origin: top left;
     -moz-transform-origin: top left;
+    -webkit-transform-origin: top left;
 
     white-space: nowrap;
     margin: 0;
@@ -162,8 +166,11 @@
     display:inline-block;
     margin: 0 ;
     margin-bottom: 0px;
-    padding:100px;
     }
+
+  .boxwrapper a {
+    padding:100px;
+  }
 
   .cover {
     width:calc(100% - 200px);
