--- a/css/projects.css
+++ b/css/projects.css
@@ -54,15 +54,32 @@
   z-index: 19;
 }
 
-#kantar {
-  margin-top: 30px;
-  color: #FADD02;
-  transition: ease .3s;
+/* noumenon shizzl */
+#button-noumenon {
+  display: block;
+  width: 250px;
+  opacity: 0.8;
+  z-index: 3;
+  float: right;
 }
 
-#kantar:hover {
-  margin-top: 30px;
-  color: #6102FA;
+.left a {
+  width: 90%;
+}
+
+#button-noumenon:hover {
+  opacity: 1;
+}
+
+.rotation {
+  animation: spin 40s ease-in-out infinite;
+}
+
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 #addlink {
@@ -100,6 +117,11 @@ a {
   transition: ease .3s;
   transform-origin: 0;
   z-index: 5;
+}
+
+.noumenon {
+  display: block;
+  position: relative;
 }
 
 .right a:hover {
@@ -156,6 +178,29 @@ p { font-family: Archia Light; }
 video {
   padding-top: 30px;
 }
+
+ .twocolumn {
+  padding-top: 60px;
+  background-color: #F2F2F2;
+
+  display: grid;
+  /*grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));*/
+  grid-template-columns: auto;
+
+  /*display: flex;
+  justify-content: space-between;
+  overflow: hidden;*/
+
+}
+
+.twocolumn img {
+  flex-wrap: nowrap;
+  justify-items: left;
+  height: 60vh;
+  width: auto;
+  flex-shrink: inherit;
+}
+
 
 /* NEXT PROJECT  */
 .next {
@@ -294,6 +339,7 @@ video {
   .next h3 { font-size: 30pt; } 
 }
 
+
   /* LABEL SWITCH FOOTER */
 .item1 .new-label span, .item2 .new-label span, .item3 .new-label span {
   position: relative;
@@ -328,6 +374,10 @@ video {
     width: 100%;
     display: block;
     padding: 50px;
+  }
+
+  .twocolumn {
+    grid-template-columns: auto auto;
   }
 }
 
