--- a/css/intro-animation.css
+++ b/css/intro-animation.css
@@ -98,7 +98,7 @@
     transform: translate(30%, 80%);
   }
   50% {
-    transform: translate(0%, 80%);
+    transform: translate(0%, 120%);
   }
   75% {
     transform: translate(40%, 80%);
@@ -116,3 +116,22 @@
     transform: scale(6);
   }
 }
+
+@media only screen and (min-width: 1600px) {
+  @keyframes intro {
+    0% {
+      transform: translate(0%, 0%);
+    }
+    25% {
+      transform: translate(30%, 80%);
+    }
+    50% {
+      transform: translate(0%, 200%);
+    }
+    75% {
+      transform: translate(40%, 80%);
+    }
+    95% {
+      transform: translate(0%, 0%);
+    }
+  }
