--- a/css/intro.css
+++ b/css/intro.css
@@ -41,7 +41,7 @@ overflow-y: hidden;
 
 #scroll {
   position: absolute;
-  padding-bottom: 50%;
+  bottom: 20%;
   width: 100%;
   text-align: center;
   z-index: -1;
@@ -69,9 +69,5 @@ p {
 @media only screen and (max-width: 500px) {
   p {
     font-size: 35pt;
-  }
-
-  #scroll h3 {
-    padding-bottom: 20%;
   }
 }
